# 3121B-Teodor_Pogor_Cinemav2

./: CMakeLists.txt  README.md  rezervari.txt  sali.txt
src/: Cinematograf.cpp  Cinematograf.h  Film.cpp  Film.h  Rezervare.cpp  Rezervare.h  Sala.cpp  Sala.h  main.cpp
